Fixes 4244: Make apoc.dv.* procedures work in clusters